#286 - Task command help.

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ web/static/_categories.html
 web/static/script/stormRunDialog.js
 
 web/static/script/stormStopDialog.js
+
+web/static/_command_help.html
