--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -44,7 +44,11 @@ tmpdir /tmp
 # 'true' sends the output to the logfiles
 redirect_stdout true
 
-# admin web ui settings
-web_port 80
+# admin ui settings
+admin_ui_port 88
 # the debug level (0-4 with 0 being 'none' and 4 being 'verbose')    
-web_debug 0
+admin_ui_debug 0
+
+# user ui settings
+user_ui_port 80
+user_ui_debug 0
