Maestro backport - unified logging
uiCommon.IsGUID moved to catocommon.is_guid
uiCommon.HTTP* moved to catocommon

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -27,7 +27,7 @@ password #CATODBPASS#
 # key must be an encrypted key
 key #ENCRYPTIONKEY#
 
-###### web specific conig
+###### web specific config
 
 # ssl from web to mysql database?
 databaseUseSSL false
@@ -40,15 +40,38 @@ logfiles #LOGFILESDIR#
 # general settings
 tmpdir /tmp
 
+# report definitions are stored in the code root by default.
+# that is overridable using the following setting
+# report_store #HOME#/reports
+
 # set to 'false' to enable stdout going to the console for development
 # 'true' sends the output to the logfiles
 redirect_stdout true
+# set to 'false' to suppress the verbose built in webserver HTTP messages
+# from going to the logfile.  'true' will log all HTTP messages
+write_http_logs false
+
+
+# the debug level (10=DEBUG, 20=INFO, 30=WARNING, 40=ERROR, 50=CRITICAL)    
 
 # admin ui settings
-admin_ui_port 80
-# the debug level (0-4 with 0 being 'none' and 4 being 'verbose')    
-admin_ui_debug 0
+admin_ui_port 8082
+admin_ui_debug 50
+admin_ui_client_debug 50
 
 # user ui settings
-user_ui_port 88
-user_ui_debug 0
+user_ui_port 8080
+user_ui_debug 50
+user_ui_client_debug 50
+user_ui_enable_refresh true
+
+# rest api settings
+rest_api_url http://localhost
+rest_api_port 4001
+rest_api_debug 20
+
+# dash api settings
+dash_api_url http://localhost
+dash_api_port 4002
+dash_api_debug 0
+
