--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,17 @@ lib/catoadminui/imageMethods.py
 lib/catoadminui/tag.py
 
 lib/catoadminui/tagMethods.py
+
+ui/admin/static/.DS_Store
+
+ui/admin/static/_amenu.html
+
+ui/admin/static/_categories.html
+
+ui/admin/static/_command_help.html
+
+ui/admin/static/_dmenu.html
+
+ui/admin/static/_functions.html
+
+ui/admin/static/_umenu.html
