--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -19,10 +19,12 @@
 server 127.0.0.1
 database #CATODBNAME#
 user #CATODBUSER#
+readuser #CATODBREADUSER#
 port 3306
 
 # password must be an encrypted password
 password #CATODBPASS#
+readpassword #CATODBREADPASS#
 
 # key must be an encrypted key
 key #ENCRYPTIONKEY#
@@ -38,6 +40,7 @@ databaseUseSSL false
 logfiles #LOGFILESDIR#
 
 # general settings
+uicache /var/cato/ui
 tmpdir /tmp
 
 # report definitions are stored in the code root by default.
