--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -40,8 +40,6 @@ mongodb.port 27017
 # password must be an encrypted password
 mongodb.password #CATODBPASS#
 
-###### web specific config
-
 # ssl from web to mysql database?
 databaseUseSSL false
 
@@ -54,9 +52,16 @@ logfiles #LOGFILESDIR#
 uicache #CATOFILES#/ui
 tmpdir #TMPDIR#
 
+
+# Extensions are user-defined commands that enhance the Task Engine.
+# the default path is CATO_HOME/extensions
+extension_path #HOME#/extensions
+
+
 # report definitions are stored in the code root by default.
 # that is overridable using the following setting
 # report_store #HOME#/reports
+
 
 # set to 'false' to enable stdout going to the console for development
 # 'true' sends the output to the logfiles
@@ -66,6 +71,7 @@ redirect_stdout true
 write_http_logs false
 
 
+###### web specific config
 # the debug level (10=DEBUG, 20=INFO, 30=WARNING, 40=ERROR, 50=CRITICAL)    
 
 # admin ui settings
