installer now replaces #CATOHOME#

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -55,12 +55,12 @@ tmpdir #TMPDIR#
 
 # Extensions are user-defined commands that enhance the Task Engine.
 # the default path is CATO_HOME/extensions
-extension_path #HOME#/extensions
+extension_path #CATOHOME#/extensions
 
 
 # report definitions are stored in the code root by default.
 # that is overridable using the following setting
-# report_store #HOME#/reports
+# report_store #CATOHOME#/reports
 
 
 # set to 'false' to enable stdout going to the console for development
