tweaked default.conf file

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -55,7 +55,7 @@ tmpdir #TMPDIR#
 
 # Extensions are user-defined commands that enhance the Task Engine.
 # the default path is CATO_HOME/extensions
-extension_path #CATOHOME#/extensions
+extension_path #CATOHOME#/extensions;
 
 
 # report definitions are stored in the code root by default.
