added reports dir to install and conf

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -60,7 +60,7 @@ extension_path #CATOHOME#/extensions;
 
 # report definitions are stored in the code root by default.
 # that is overridable using the following setting
-# report_store #CATOFILES#/reports
+report_store #CATOFILES#/reports
 
 
 # set to 'false' to enable stdout going to the console for development
