Closes #4 - SSL/TLS (https) now enabled for the Cato UI and REST API.

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -78,6 +78,9 @@ write_http_logs false
 admin_ui_port 8082
 admin_ui_debug 20
 admin_ui_client_debug 20
+admin_ui_use_ssl false
+# admin_ui_ssl_cert /path/mycert.crt
+# admin_ui_ssl_key /path/mykey.key
 
 # user ui settings
 user_ui_port 8080
