default.cato.conf has a comment about the license_file_path

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -57,6 +57,10 @@ tmpdir #TMPDIR#
 # the default path is CATO_HOME/extensions
 extension_path #CATO_HOME#/extensions;
 
+# The default demo license file is in $MAESTROHOME
+# Use this setting to specify another location.
+# ex: license_file_path /etc/cato
+license_file_path 
 
 # report definitions are stored in the code root by default.
 # that is overridable using the following setting
