--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -78,6 +78,10 @@ write_http_logs false
 ###### web specific config
 # the debug level (10=DEBUG, 20=INFO, 30=WARNING, 40=ERROR, 50=CRITICAL)    
 
+# applies to all UIs
+ui_enable_tokenauth true
+ui_token_lifespan 360
+
 # admin ui settings
 admin_ui_port 8082
 admin_ui_debug 10
