new default cato.conf and config settings.

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -62,10 +62,6 @@ extension_path #CATO_HOME#/extensions;
 # ex: license_file_path /etc/cato
 license_file_path 
 
-# report definitions are stored in the code root by default.
-# that is overridable using the following setting
-report_store #CATOFILES#/reports
-
 
 # set to 'false' to enable stdout going to the console for development
 # 'true' sends the output to the logfiles
@@ -95,14 +91,16 @@ user_ui_port 8080
 user_ui_debug 10
 user_ui_client_debug 20
 user_ui_enable_refresh true
+user_ui_use_ssl false
 
 # rest api settings
 rest_api_url http://localhost
 rest_api_port 4001
 rest_api_debug 10
+rest_api_use_ssl false
 
 # dash api settings
 dash_api_url http://localhost
 dash_api_port 4002
 dash_api_debug 0
-
+dash_api_use_ssl false
