Extension paths are now named in cato.conf.  External products will use these names to inform the TE how to enhance itself from an extension.

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -55,12 +55,7 @@ tmpdir #TMPDIR#
 
 # Extensions are user-defined commands that enhance the Task Engine.
 # the default path is CATO_HOME/extensions
-extension_path #CATO_HOME#/extensions;
-
-# The default demo license file is in $MAESTROHOME
-# Use this setting to specify another location.
-# ex: license_file_path /etc/cato
-license_file_path 
+extensions cato:#CATO_HOME#/extensions;
 
 
 # set to 'false' to enable stdout going to the console for development
