installer now allows configuration of a hostname property for building application urls

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -76,7 +76,7 @@ ui_enable_tokenauth true
 ui_token_lifespan 120
 
 # admin ui settings
-admin_ui_hostname localhost
+admin_ui_hostname #CATO_HOST#
 admin_ui_port 8082
 admin_ui_debug 10
 admin_ui_client_debug 20
@@ -85,7 +85,7 @@ admin_ui_use_ssl false
 # admin_ui_ssl_key /path/mykey.key
 
 # user ui settings
-user_ui_hostname localhost
+user_ui_hostname #CATO_HOST#
 user_ui_port 8080
 user_ui_debug 10
 user_ui_client_debug 20
@@ -93,13 +93,13 @@ user_ui_enable_refresh true
 user_ui_use_ssl false
 
 # rest api settings
-rest_api_hostname localhost
+rest_api_hostname #CATO_HOST#
 rest_api_port 4001
 rest_api_debug 10
 rest_api_use_ssl false
 
 # dash api settings
-dash_api_hostname localhost
+dash_api_hostname #CATO_HOST#
 dash_api_port 4002
 dash_api_debug 0
 dash_api_use_ssl false
