updated requirements file to include specific versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-web.py
-croniter
-PyMySQL
-pymongo
-jsonpath
-pysphere
-pexpect
-python-tds
+web.py==0.37
+croniter==3.3
+PyMySQL==0.6.1
+pymongo==2.6.3
+jsonpath==0.54
+pysphere==0.1.8
+pexpect==2.4
+python-tds==1.6.2
 argparse
-jenkinsapi
+jenkinsapi==0.2.16
