added newsfeed to default.cato.conf

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -104,3 +104,9 @@ dash_api_port 4002
 dash_api_debug 0
 dash_api_use_ssl false
 dash_api_tmpdir /tmp
+
+# newsfeed api settings
+newsfeed_api_hostname #CATO_HOST#
+newsfeed_api_port 4004
+newsfeed_api_debug 0
+newsfeed_api_use_ssl false
