default.cato.conf now has the proper replacement token for the Canvas install script.

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -52,8 +52,8 @@ logfiles #LOGFILESDIR#
 uicache #CATOFILES#/ui
 tmpdir #TMPDIR#
 
-# report filesystem repository
-report_store #MAESTRO_HOME#/dash/resource
+# Canvas filesystem repository
+report_store #CANVAS_HOME#/dash/resource
 
 # Extensions are user-defined commands that enhance the Task Engine.
 # the default path is CATO_HOME/extensions
