--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,20 @@ web.py==0.37
 croniter==0.3.3
 PyMySQL==0.6.1
 pymongo==2.6.3
-jsonpath==0.54
-#pysphere==0.1.8
+--allow-unverified jsonpath jsonpath==0.54
 pexpect==2.4
 python-tds==1.6.2
 argparse
-#jenkinsapi==0.2.16
 https://github.com/cloudsidekick/awspy/archive/master.zip
-https://github.com/cloudsidekick/vcloudpy/archive/master.zip
 https://github.com/pdunnigan/pywinrm/archive/master.zip
+
+# optional packages ...
+
+# optional pysphere package for vmware vsphere support
+# --allow-unverified pysphere pysphere==0.1.8
+
+# optional jenkins package for jenkins integration support
+# jenkinsapi==0.2.16
+
+# optional vcloudpy package for vmware vCloud support
+# https://github.com/cloudsidekick/vcloudpy/archive/master.zip
