removed requirement that mongo install requires authentication

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -31,14 +31,17 @@ key #ENCRYPTIONKEY#
 
 ####### mongodb database config
 # default mongo server of 127.0.0.1 will listen on localhost only
+# the default cato install uses an unauthenticated mongodb install
+# if the mongodb.user setting is blank, connections will be made
+# without authentication
 
 mongodb.server 127.0.0.1
 mongodb.database #CATODBNAME#
-mongodb.user #CATODBUSER#
+mongodb.user 
 mongodb.port 27017
 
 # password must be an encrypted password
-mongodb.password #CATODBPASS#
+mongodb.password 
 
 # ssl from web to mysql database?
 databaseUseSSL false
