#339 - CATO_HOME references updated to CSK_HOME

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -56,11 +56,11 @@ uicache #CATOFILES#/ui
 tmpdir #TMPDIR#
 
 # Canvas filesystem repository
-report_store #CANVAS_HOME#/dash/resource
+report_store $CSK_HOME/canvas/dash/resource
 
 # Extensions are user-defined commands that enhance the Task Engine.
-# the default path is CATO_HOME/extensions
-extensions cato:#CATO_HOME#/extensions;
+# the default path is $CSK_HOME/cato/extensions
+extensions cato:$CSK_HOME/cato/extensions;
 
 
 # set to 'false' to enable stdout going to the console for development
