setting for alternate canvas fs repo paths

--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -55,9 +55,6 @@ logfiles #LOGFILESDIR#
 uicache #CATOFILES#/ui
 tmpdir #TMPDIR#
 
-# Canvas filesystem repository
-report_store $CSK_HOME/canvas/dash/resource
-
 # Extensions are user-defined commands that enhance the Task Engine.
 # the default path is $CSK_HOME/cato/extensions
 extensions cato:$CSK_HOME/cato/extensions;
@@ -107,6 +104,11 @@ dash_api_port 4002
 dash_api_debug 0
 dash_api_use_ssl false
 dash_api_tmpdir /tmp
+# filesystem repository path
+report_store $CSK_HOME/canvas/dash/resource
+# additional filesystem search paths
+# name:value; pairs
+dash_api_alt_repo_dirs legato-ui:$CSK_HOME/legato/ui/canvas;legato-plugins:$CSK_HOME/legato/plugins;
 
 # newsfeed api settings
 newsfeed_api_hostname #CATO_HOST#
