--- a/conf/default.cato.conf
+++ b/conf/default.cato.conf
@@ -115,3 +115,6 @@ newsfeed_api_hostname #CATO_HOST#
 newsfeed_api_port 4004
 newsfeed_api_debug 0
 newsfeed_api_use_ssl false
+
+# message hub settings
+msghub_port 4003
